; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_fast-export.c_get_object_mark.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_fast-export.c_get_object_mark.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object = type { i32 }

@idnums = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.object*)* @get_object_mark to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_object_mark(%struct.object* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.object*, align 8
  %4 = alloca i8*, align 8
  store %struct.object* %0, %struct.object** %3, align 8
  %5 = load %struct.object*, %struct.object** %3, align 8
  %6 = call i8* @lookup_decoration(i32* @idnums, %struct.object* %5)
  store i8* %6, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = icmp ne i8* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %13

10:                                               ; preds = %1
  %11 = load i8*, i8** %4, align 8
  %12 = call i32 @ptr_to_mark(i8* %11)
  store i32 %12, i32* %2, align 4
  br label %13

13:                                               ; preds = %10, %9
  %14 = load i32, i32* %2, align 4
  ret i32 %14
}

declare dso_local i8* @lookup_decoration(i32*, %struct.object*) #1

declare dso_local i32 @ptr_to_mark(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
